--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="app_graphics">Graficas y estadisticas</string>
     <string name="app_settings">Configuraciones</string>
     <string name="app_help">Ayuda</string>
+    <string name="output">This is a system message: ....</string>
 </resources>
