--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="app_help">Ayuda</string>
     <string name="app_hour">Hora</string>
     <string name="app_activity">Actividad</string>
+    <string name="app_banner_feelings">Como te sentiste hoy?</string>
     <string name="output">This is a system message: ....</string>
     <string name="btnLoad">Cargar</string>
     <string name="btnSave">Guardar</string>
