--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="lbl_keyword">Palabra magica:</string>
     <string name="lbl_help_insert_keyword">Ingrese tirulo...</string>
     <string name="lbl_help_insert_history">Ingresa tu historia...</string>
+    <string name="lbl_help_insert_title_dream">Ingresa titulo de tu sueño...</string>
+    <string name="lbl_help_insert_dream">Ingresa tu sueño...</string>
     <string name="output">This is a system message: ....</string>
     <string name="btnLoad">Cargar</string>
     <string name="btnSave">Guardar</string>
