--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="app_register_mesage_4">Dime cual es tu nombre?</string>
     <string name="app_register_mesage_5">Eres chico o chica?</string>
     <string name="app_register_mesage_6">Fecha de nacimiento</string>
-    <string name="lbl_help_insert_title">Ingrese Nombre psicotropico</string>
+    <string name="lbl_help_insert_title">Ingrese Nombre psicoactivo</string>
     <string name="lbl_detonant">detonante:</string>
     <string name="lbl_help_detonant">Que situación ocurrio para detonar el consumo?</string>
     <string name="lbl_result">resultado:</string>
