--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,9 @@
     <string name="app_register_mesage_4">Dime cual es tu nombre?</string>
     <string name="app_register_mesage_5">Eres chico o chica?</string>
     <string name="app_register_mesage_6">Fecha de nacimiento</string>
+    <string name="lbl_activities_list">Lista de actividades: </string>
+    <string name="lbl_feelings_list">Lista de sentimientos: </string>
+    <string name="lbl_drugs_list">Lista de drogas: </string>
     <string name="lbl_help_insert_title">Ingrese Nombre psicoactivo</string>
     <string name="lbl_help_insert_psichoactive">Psicoactivo:</string>
     <string name="lbl_detonant">detonante:</string>
@@ -50,7 +53,6 @@
     <string name="btnEditFeelings">Sentimientos</string>
     <string name="btnEditDrugList">Listado de drogas</string>
     <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
-
 
 
 </resources>
