--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="lbl_activities_list">Lista de actividades: </string>
     <string name="lbl_feelings_list">Lista de sentimientos: </string>
     <string name="lbl_feelinfs_report">Reporte de sentimientos: </string>
+    <string name="lbl_economy_report">Reporte economico: </string>
     <string name="lbl_drugs_list">Lista de drogas: </string>
     <string name="lbl_help_insert_title">Ingrese Nombre psicoactivo</string>
     <string name="lbl_help_insert_psichoactive">Psicoactivo:</string>
