put help in views and declare main Thread

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="app_username">Nombre de usuario: </string>
     <string name="app_sex">Genero: </string>
     <string name="app_age">Edad: </string>
-    <string name="app_enter_password">Ingrese password: </string>
+    <string name="app_enter_password">Ingrese secret password: </string>
     <string name="app_birth_date">Fecha de nacimiento: </string>
     <string name="app_banner_feelings">Como te sentiste hoy?</string>
     <string name="app_register_mesage_1">Hola, Soy tu diario...</string>
@@ -32,13 +32,22 @@
     <string name="app_litle_box_status">Caja menor:</string>
     <string name="app_big_box_status">Caja mayor:</string>
     <string name="app_mounth_name">Mes actual</string>
+    <string name="lbl_help_calendar_banner_tipe_of_view">Selecciona el tipo de vista:</string>
+    <string name="lbl_help_calendar_banner">Esta es la vista anual.\nAqui podras ver como va tu año.</string>
+    <string name="lbl_help_calendar_choose_month">Selecciona el mes del año:</string>
+    <string name="lbl_box_help_banner">Aquí puedes ingresar la cantidad que tienes en los bolsillos (caja menor) ó la cantidad que tienes ahorrada (caja mayor)</string>
+    <string name="lbl_help_banner_list_of_activities">Está es la lista de actividades que realizas las 24 horas del día.\nEdita, Agrega ó elimina actividades.</string>
+    <string name="lbl_help_banner_list_of_Drugs">Está es la lista de drogas que tu consumes.\nEdita, Agrega ó elimina drogas.</string>
+    <string name="lbl_help_banner_list_of_feelings">Está es la lista de tus sentimientos.\nEdita, Agrega ó elimina drogas.</string>
+    <string name="lbl_help_dream_diary_banner">Este es tu diario de sueños, aqui puedes escribir lo que sueñas. </string>
+    <string name="lbl_help_drug_counter">Este es un contador de psicoactivos.\nCada vez que consumas, seleccionalo y luego dale al botón + </string>
     <string name="lbl_economy_concep">Concepto: </string>
     <string name="lbl_economy_debit">Debe: </string>
     <string name="lbl_economy_credit">Haber: </string>
     <string name="lbl_activities_list">Lista de actividades: </string>
     <string name="lbl_feelings_list">Lista de sentimientos: </string>
     <string name="lbl_feelinfs_report">Reporte de sentimientos: </string>
-    <string name="lbl_economy_report">Reporte economico: </string>
+    <string name="lbl_economy_report">Reporte economico: \nIngresos vs Egresos</string>
     <string name="lbl_time_distribution_report">Reporte inversión de tiempo: </string>
     <string name="lbl_drugs_list">Lista de drogas: </string>
     <string name="lbl_help_insert_title">Ingrese Nombre psicoactivo</string>
